Criação de autenticadores de eleitores
