# src/controller/eleitor.controller.js
@@ -2,6 +2,8 @@ const express = require('express');
 const controller = express.Router();
 const eleitorService = require('../service/eleitor.service');
 
+// AVISO IMPORTANTE: Os comentários são utilizados para documentação do swagger autogen 
+
 controller.post('/createEleitor', (request, response) => {
     // #swagger.tags = ['Eleitores']
     // #swagger.summary = 'Cadastra um novo eleitor no banco de dados.'
@@ -15,11 +17,24 @@ controller.post('/createEleitor', (request, response) => {
     response.send(eleitorService.create(request.body));
 });
 
+controller.post('/authentication', async (request, response) => {
+    // #swagger.tags = ['Eleitores']
+    // #swagger.summary = 'Autentica o eleitor no banco de dados.'
+    // #swagger.description = 'Autentica o eleitor no banco de dados.'
+    /* #swagger.parameters['dados do eleitor'] = {
+        in: 'body',
+        description: 'dados do eleitor.',
+        required: true,
+        schema: { $ref: "#/definitions/Credencial"}
+    }*/
+    response.send(await eleitorService.authenticate(request.body));
+})
+
 controller.get('/getEleitor', async (request, response) => {
     // #swagger.tags = ['Eleitores']
-    // #swagger.parameters['numeroInscricao'] = { description: 'Número de inscrição do eleitor.' }
-    // #swagger.summary = 'Retorna um eleitor cadastrado usando sua inscrição.'
-    // #swagger.description = 'Retorna um eleitor cadastrado usando sua inscrição'
+    // #swagger.parameters['cpf'] = { description: 'Número de cpf do eleitor.' }
+    // #swagger.summary = 'Retorna um eleitor cadastrado usando seu cpf.'
+    // #swagger.description = 'Retorna um eleitor cadastrado usando seu cpf'
     response.send(await eleitorService.getEleitor(request.query));
 });
 
@@ -30,11 +45,11 @@ controller.get('/getAllEleitores', async (request, response) => {
     response.send(await eleitorService.getAll());
 });
 
-controller.put('/updateEleitor/:numeroInscricao', async (request, response) => {
+controller.put('/updateEleitor/:cpf', async (request, response) => {
     // #swagger.tags = ['Eleitores']
     // #swagger.summary = 'Atualiza informações de um eleitor.'
     // #swagger.description = 'Atualiza as informações do eleitor, localizando-o através de seu número, repassando os dados necessários. '
-    // #swagger.parameters['numeroInscricao'] = { description: 'Número de inscrição do eleitor.' }
+    // #swagger.parameters['cpf'] = { description: 'Número de cpf do eleitor.' }
     /* #swagger.parameters['dados atualizados'] = {
         in: 'body',
         description: 'eleitor atualizado.',
@@ -46,9 +61,9 @@ controller.put('/updateEleitor/:numeroInscricao', async (request, response) => {
 
 controller.delete('/deleteEleitor', async (request, response) => {
     // #swagger.tags = ['Eleitores']
-    // #swagger.parameters['numeroInscricao'] = { description: 'Número de inscrição do eleitor.' }
+    // #swagger.parameters['cpf'] = { description: 'Número de cpf do eleitor.' }
     // #swagger.summary = 'Deleta um eleitor cadastrado, através de seu número de eleitor.'
-    // #swagger.description = 'Deleta um eleitor cadastrado, através de seu número de eleitor.'
+    // #swagger.description = 'Deleta um eleitor cadastrado, através de seu número de cpf.'
     response.send(await eleitorService.delete(request.query));
 });
 
